--- a/voyages.css
+++ b/voyages.css
@@ -1,4 +1,4 @@
-.dropbtn, .dropbtn2 {
+.dropbtn, .dropbtn_name {
     background-color: white;
     color: black;
     padding: 16px;
@@ -6,12 +6,12 @@
     border: none;
 }
 
-.dropdown, .dropdown2 {
+.dropdown, .dropdown_name {
     position: relative;
     display: inline-block;
 }
 
-.dropdown-content, .dropdown-content2 {
+.dropdown-content, .dropdown-content_name {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -20,15 +20,15 @@
     z-index: 1;
 }
 
-.dropdown-content a, .dropdown-content2 a  {
+.dropdown-content a, .dropdown-content_name a  {
     color: #6e6e6e;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content, .dropdown-content2 a:hover {background-color: #ddd;}
+.dropdown-content, .dropdown-content_name a:hover {background-color: #ddd;}
 
-.dropdown:hover .dropdown-content, .dropdown2:hover .dropdown-content2 {display: block;}
+.dropdown:hover .dropdown-content, .dropdown_name:hover .dropdown-content_name {display: block;}
 
-.dropdown:hover .dropbtn, .dropdown2:hover .dropbtn2{background-color: #6e6e6e;} 
+.dropdown:hover .dropbtn, .dropdown_name:hover .dropbtn_name{background-color: #6e6e6e;} 
