--- a/voyages.css
+++ b/voyages.css
@@ -32,3 +32,31 @@
 .dropdown:hover .dropdown-content, .dropdown_name:hover .dropdown-content_name {display: block;}
 
 .dropdown:hover .dropbtn, .dropdown_name:hover .dropbtn_name{background-color: #6e6e6e;} 
+
+header {
+
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid black;
+}
+
+.alone_links {
+
+    margin-top: 1.5%;
+    text-decoration: none;
+    font-size: 16px;
+    display: flex;
+    flex-direction: row; 
+    border: 1px solid black;
+    width: 10%;
+}
+
+.alone_links a {
+    text-decoration: none;
+    padding-left: 5%;
+   
+}
+
+header img {
+    margin-top: 1%;
+}
