--- a/voyages.css
+++ b/voyages.css
@@ -8,8 +8,6 @@
 
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-
   --font: "Poppins", sans-serif;
   --text-color: #574f57;
   --text-hover: #979376;
@@ -32,8 +30,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
 
   width: 100%;
   height: 100vh;
@@ -56,19 +54,10 @@ body {
 .social-container a {
   border: 1px solid saddlebrown;
   padding-bottom: 75%;
-  
+  /* padding-top: 50%; */
+  /* padding-left: 50%; */
   margin-left: 14%;
- 
-
-} 
-
-.social-container a{ 
-    
-    border: 1px solid saddlebrown;
-    padding-bottom: 75%;
-    margin-left: 14%;
-    
-
+  /* top:40%; */
 }
 
 .social-container img {
@@ -78,7 +67,7 @@ body {
 
 .dropbtn,
 .dropbtn_name {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   color: black;
   padding: 16px;
   font-size: 16px;
