--- a/algerie.css
+++ b/algerie.css
@@ -49,7 +49,7 @@ a {
   font-size: 0.9rem;
   transition: 0.3s;
   font-weight: 600;
-  color: var(--text-color);
+  color: var(--primary-color);
 }
 
 a:hover {
@@ -71,7 +71,7 @@ header {
   background: url(/img/Alger/Alger.jpg) no-repeat center;
   background-size: cover;
   position: relative;
-  color: var(--text-color);
+  color: var(--primary-color);
   padding-top: 27vh;
   transition: 0.5s;
 }
@@ -88,7 +88,7 @@ header::before {
 }
 
 header a {
-  color: var(--text-color);
+  color: var(--primary-color);
 }
 
 .container,
@@ -137,10 +137,14 @@ nav .container-inner {
 
 nav .container ul {
   width: 100%;
-  margin: 0 1em;
+  margin: 0 0.7em;
 }
 
-nav .contianer ul:nth-child(2) {
+nav .container .ul-right {
+  margin-left: 150px;
+}
+
+nav .container ul:nth-child(2) {
   text-align: right;
 }
 
@@ -215,4 +219,310 @@ nav .fa-bars:hover {
   margin: 0 1em;
   padding: 0 1.7em;
   justify-self: center;
+}
+
+.column {
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.col-1 {
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.col-2 {
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.col-2 > div {
+  width: 100%;
+}
+
+.col-3 {
+  padding-top: 50%;
+  align-items: flex-end;
+}
+
+.social a {
+  display: block;
+  margin: 0.8em 0;
+  font-size: 1.2em;
+}
+
+.big-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 2em;
+}
+
+.big-title sup {
+  font-size: 0.3em;
+}
+
+.title {
+  margin: 0.8em 0.5em 1.5em 0;
+}
+
+.link-main i {
+  margin-left: 0.5em;
+}
+
+.slide-counter {
+  font-weight: 300;
+}
+
+/* <======= PAGINATION ======> */
+
+.pagination {
+  background: var(--desc-color);
+  width: 0.7em;
+  padding: 0.7em;
+  margin: 1em 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.pagination-active {
+  background: #e54461;
+  box-shadow: 0 0 8px (#e54461);
+}
+
+.header-body .fa-chevron-down {
+  font-size: 2.5em;
+}
+
+.slide-card {
+  background: var(--primary-color);
+  padding: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--desc-color);
+  transition: 0.3s;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  min-width: 50vw;
+}
+
+.slide-card > div {
+  margin: 0 1em;
+  max-width: 10em;
+  transition: 0.3s;
+}
+
+.slide-card-active {
+  color: #e54461;
+}
+
+/* <====== DISCOVER ======> */
+
+.decouvrir .container-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 8em 1.7em;
+}
+
+.decouvrir h1 {
+  font-size: 2em;
+}
+
+.decouvrir i {
+  color: #e54461;
+}
+
+.decouvrir .container-inner > div {
+  max-width: 22em;
+}
+
+/* <===== CARDS =====> */
+
+.card {
+  width: 100%;
+  height: 30em;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.card,
+.small-card {
+  margin: 8em 1em;
+}
+
+.card img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card small {
+  color: var(--primary-color);
+  text-transform: uppercase;
+}
+
+.card div {
+  background: #e54461;
+  position: relative;
+  border-radius: 2.5px;
+  padding: 1em 1em 0 1em;
+  width: 80%;
+}
+
+/* <===== INFORMATIONS ======> */
+
+form {
+  padding: 2em 0;
+}
+
+.informations span {
+  color: #e54461;
+  font-weight: 600;
+}
+
+.informations h1 {
+  margin: 0.3em 0;
+}
+
+.input-container {
+  border-bottom: 2px #e54461 solid;
+}
+
+.input-container input {
+  width: 90%;
+}
+
+.input-container input,
+.input-container button {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+/* <===== FOOTER ======> */
+
+footer {
+  padding: 1.7em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer p {
+  font-weight: 600;
+  margin: 0;
+}
+
+footer span {
+  color: #e54461;
+}
+
+footer > div:nth-child(3) a {
+  font-size: 1.2em;
+  margin: 0 0.5em;
+}
+
+hr {
+  width: 90%;
+  border: 1px #eee solid;
+}
+
+/* <====== MEDIAQUERIES RESPONSIVE =====> */
+
+@media screen and (max-width: 1060px) {
+  header {
+    padding-top: 8em;
+  }
+  .header-body .container {
+    grid-template-columns: 1fr;
+  }
+  .heading {
+    flex-direction: column;
+  }
+  .title {
+    margin-bottom: 0.2em;
+  }
+  .scroll-button {
+    margin-top: 3em;
+  }
+  .column {
+    height: initial;
+  }
+  .col-1 {
+    padding: 0 1.7em;
+  }
+  .col-3 {
+    padding-top: initial;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .pagination {
+    margin: 2em 1em;
+  }
+  .slide-card {
+    position: relative;
+  }
+  .social a {
+    display: inline-block;
+    margin: 1em 0.5em;
+  }
+  .social a:nth-child(1) {
+    margin-left: 0;
+  }
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
+  footer > div {
+    margin: 1.7em 0 0 0;
+  }
+}
+
+@media screen and (min-width: 1060px) and (max-height: 500px) {
+  header {
+    padding-top: 10em;
+  }
+  column {
+    height: 550px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  nav .container ul{
+    display: none;
+  }
+  .heading{font-style: 1.5em;}
+  .decouvrir .container-inner{
+    flex-direction: column;
+    align-items: center;
+  }
+  .decouvrir .container-inner > div:nth-child(2) > div:nth-child(1) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .slide-card {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-height:600px) {
+  .menu > div {
+    padding-top: 5em;
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width:400px){
+  html{font-size: 13px;}
 }
