--- a/allemagne.css
+++ b/allemagne.css
@@ -5,7 +5,6 @@
 /* <===== Déclarations des variables dans le ROOT ======> */
 
 :root {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -21,414 +20,448 @@
 }
 
 body {
-
   margin: 0;
   padding: 0;
-
 }
 
-/* ///////////////////////:Main-container////////////// */
+/* ****************************:Main-container********************* */
 
-.main-berlin-container{
+.main-berlin-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background-image: url("img//allemagne/all3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+  width: 100%;
+}
+
+.main-txt-container {
+  font-family: var(--font);
+  font-size: 5rem;
+  letter-spacing: 10px;
+  color: rgba(4, 0, 3, 0.97);
+  padding-left: 2%;
+}
+
+.main-txt-container p {
+  font-family: var(--font);
+  font-size: 5rem;
+  letter-spacing: 10px;
+}
+/* **************quote-container************* */
+
+.quote-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  height: 20%;
+
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
+
+.quote-container p:nth-child(1) {
+  font-family: var(--font);
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+/* ! ******************************************venue container****************************************************/
+
+.venue-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgb(250, 246, 246);
+}
+/* **********Line-top-black*********** */
+
+.line-container {
+  width: 100%;
+}
+
+.line-container hr {
+  border: 0;
+  height: 3px;
+  width: 90%;
+  margin-top: 5%;
+  background: rgb(10, 1, 1);
+  margin-bottom: 5%;
+}
+
+.line-container p {
+  font-family: var(--font);
+  font-size: 5rem;
+  letter-spacing: 10px;
+  padding-left: 2%;
+}
+
+/* ****************child-container-txt************* */
+
+.big-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.txt-container {
+  width: 30%;
+  height: 100%;
+
+  margin-left: 2%;
+}
+
+.txt-container p::before {
+  content: " . ";
+  color: orange;
+  width: 32px;
+  height: 32px;
+}
+
+.txt-container p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+}
+
+/* ******Orange-line******* */
+
+.vl {
+  display: flex;
+  justify-content: center;
+  padding-top: 15%;
+  margin-left: 20%;
+}
+
+.vl hr {
+  border: 0;
+  height: 25%;
+  width: 3px;
+
+  background: rgb(216, 112, 14);
+  margin-bottom: 5%;
+}
+/* *********Img-container******** */
+.img-container {
+  width: 60%;
+  height: 100%;
+
+  margin-left: 5%;
+}
+
+.img-container img {
+  width: 40%;
+  height: 85%;
+  padding: 5% 0 0 30%;
+}
+
+/* *******Links****** */
+
+.link-city-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  margin-top: 15%;
+}
+
+.link-container a {
+  text-decoration: none;
+  color: black;
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+}
+
+.link-container a:hover {
+  color: orange;
+}
+
+/* ! *******************:container-friedrischain ************************/
+
+.nei-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  width: 100%;
+
+  background-image: url("img/allemagne/fried.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* *****head-line****** */
+
+.line-nei-container {
+  width: 100%;
+}
+
+.line-nei-container hr {
+  border: 0;
+  height: 3px;
+  width: 90%;
+  margin-top: 5%;
+  background: rgb(10, 1, 1);
+  margin-bottom: 5%;
+}
+
+.line-nei-container p {
+  font-family: var(--font);
+  font-size: 5rem;
+
+  padding-left: 2%;
+}
+
+/* ******friedrischaine-txt-pres******** */
+
+.nei-txt-container {
+  width: 50%;
+  margin-left: 2%;
+}
+
+.nei-txt-container p::before {
+  content: ". ";
+  color: orange;
+}
+.nei-txt-container p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+}
+/* **********Container-card-history********** */
+
+.nei-card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 50%;
+}
+
+/* *******div-left******** */
+
+.card-left-container {
+  margin-top: 2.5%;
+  width: 25%;
+
+  text-align: center;
+}
+
+.card-left-container p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 10px;
+  cursor: wait;
+  font-weight: bold;
+}
+
+.card-left-container p:hover {
+  color: orange;
+}
+
+.card-left-container hr {
+  width: 25%;
+  background: rgb(216, 112, 14);
+  height: 1px;
+}
+/* ********div-right********** */
+
+.card-right-container {
+  display: none;
+  width: 50%;
+}
+
+.card-right-container p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+}
+
+.card-left-container:hover + .card-right-container {
+  display: block;
+  animation: appear 2s ease-out;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateX(0px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+
+/* *******************East-side-gallery************ */
+
+.nei2-card-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-top: 2%;
+  padding-bottom: 5%;
+ 
+}
+
+.east-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.east-title h2 {
+  font-family: var(--font);
+  font-size: 5rem;
+  padding-left: 2%;
+}
+
+.east-title p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+  padding-left: 2%;
+}
+
+.east-img-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  margin-top: 2%;
+}
+
+.east-img-container img {
+  width: 25%;
+}
+
+.-east-line-container {
+  width: 100%;
+}
+
+.east-line-container hr {
+  border: 0;
+  height: 3px;
+  width: 55%;
+  margin-top: 5%;
+  background: rgb(10, 1, 1);
+  margin-bottom: 2%;
+}
+
+/* **************karl-max-container & HOUS*************** */
+
+.karl-container {
+  display: flex;
+  flex-direction: column;
+  
+  width: 100%;
+  height: 100vh;
+  padding-top: 2%;
+  padding-bottom: 5%;
+}
+
+.karl-title h2 {
+  font-family: var(--font);
+  font-size: 5rem;
+  padding-left: 2%;
+}
+
+.karl-title p {
+  font-family: var(--font);
+  font-size: 1rem;
+  letter-spacing: 2px;
+  padding-left: 2%;
+}
+
+.karl-img-container {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+
+  background-color: black;
+  margin-top: 2%;
+}
+
+.karl-img-container img {
+  width: 100%;
+}
+
+/* ************quote-bottom-container********** */
+
+.nei2-txt-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+   
+}
+
+
+
+
+.nei2-txt-container p:nth-child(1) {
+
+        font-family: var(--font);
+        font-size: 1rem;
+        font-weight: 700;
+        color: orange;
+}
+
+
+/* **********************container-kebab------------ */
+
+.german-food-container{
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-image: url('img/all3.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-
     width: 100%;
-    /* height: 100vh; */
-
-
+    height: 100vh;
+    border: 1px solid black;
 }
 
-.main-txt-container{
-
-    font-family: var(--font);
-    font-size: 5rem;
-    letter-spacing: 10px;
-    /* text-shadow: 10px 2px 2px #EDFFF9; */
-    color: rgba(4, 0, 3, 0.97);
-    padding-left: 2%;
+.food-container p{
     
-}
-
-.main-txt-container p{
-
-    font-family: var(--font);
-    font-size: 5rem;
-    letter-spacing: 10px;
-    /* font-weight: 100; */
-    /* text-shadow: 10px 2px 2px #EDFFF9; */
-    
-}
-
-.quote-container{
-
-    /* border: 1px solid black; */
-   
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-
-    width: 100%;
-    height: 20%;
-
-    padding-top: 10%;
-    padding-bottom: 5%;
-}
-
-.quote-container p:nth-child(1){
-
     font-family: var(--font);
     font-size: 1rem;
-    font-weight: 700;
-    
-}
-
-/* ! ************venue container**************/
-
-.venue-container{
-
-    display: flex;
-    
-    flex-direction: column;
-    width: 100%;
-    /* height: 100vh; */
-    background-color: rgb(250, 246, 246);
-
-}
-
-.line-container{
-    width:100% ;
-    /* height: 1; */
-    /* border: 1px solid saddlebrown; */
-
-
-
-}
-
-.line-container hr{
-
-    border: 0;
-    height: 3px;
-    width: 90%;
-    margin-top: 5%;
-    background: rgb(10, 1, 1);
-    margin-bottom: 5%;
-   
-}
-
-
-
-.line-container p{
-
-    font-family: var(--font);
-    font-size: 5rem;
-    letter-spacing: 10px;
+    letter-spacing: 2px;
     padding-left: 2%;
 }
 
-.big-container{
 
+.ad-container{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    /* justify-content: space-between; */
-    /* justify-content: space-around; */
-    /* border: 1px solid black; */
-   
-   
-
+    padding-top: 5%;
+    padding-left: 2%;
 }
-
-.txt-container{
-
-    width: 30%;
-    height: 100%;
-    /* border: 1px solid blue; */
-    margin-left: 2%;
-     /* padding: 0; */
+.ad-container p{
+    padding-left: 2%;
 }
-
-.txt-container p::before{
-
-    content: " . ";
-    color:orange;
+.ad-container img{
     width: 32px;
     height: 32px;
-
 }
-.txt-container p{
 
+.ad-container a{
     font-family: var(--font);
     font-size: 1rem;
     letter-spacing: 2px;
-
-}
-.vl{
-
-    margin-left: 20%;
-    display: flex;
-    justify-content: center;
-    /* height: 20%; */
-    /* margin-top: 50%; */
-    padding-top: 15%;
-
-}
-
-.vl hr{
-
-
-        border: 0;
-        height: 25%;
-        width: 3px;
-       
-       
-        background: rgb(216, 112, 14);
-        margin-bottom: 5%;
-        
-   
-}
-
-.img-container{
-
-    width: 60%;
-    height: 100%;
-    /* border: 1px solid seagreen; */
-    margin-left: 5%;
-   
-}
-
-.img-container img{
-
-    width: 40%;
-    height: 85%;
-    padding:5% 0 0 30%;
-    
-}
-
-
-.link-city-container{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-    margin-top: 15%;
-
-
-}
-
-.link-container a{
-
+    padding-left: 2%;
     text-decoration: none;
     color: black;
-    font-family: var(--font);
-    font-size: 1rem;
-    letter-spacing: 2px;
-}
-
-.link-container a:hover{
-
-        color:orange;
-}
-
-
-
-
-.nei-container{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    /* border: 1px solid black;
-    background-color: aqua; */
-    width: 100%;
-    /* height: 100vh; */
-    /* margin-top: 5%; */
-
-    background-image: url("img/fried.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-
+    padding: 0.25%;
 
 }
-
-/* todo section friedrischain */
-
-.line-nei-container{
-
-    width:100% ;
-
-}
-
-.line-nei-container hr{
-
-    border: 0;
-    height: 3px;
-    width: 90%;
-    margin-top: 5%;
-    background: rgb(10, 1, 1);
-    margin-bottom: 5%;
-   
-}
-
-
-
-.line-nei-container p{
-
-    font-family: var(--font);
-    font-size: 5rem;
-    /* letter-spacing: 10px; */
-    padding-left: 2%;
-}
-
-
-.nei-txt-container{
-    /* border: 1px black solid; */
-    width: 50%;
-    margin-left: 2%;
-
-}
-
-.nei-txt-container p::before{
-    content: ". ";
-    color: orange;
-
-}
-.nei-txt-container p{
-    
-
-    font-family: var(--font);
-    font-size: 1rem;
-    letter-spacing: 2px;
-    
-
-}
-
-.nei-card-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    /* border: 1px solid black; */
-    height: 50%;
-    
-}
-
-.card-left-container{
-    margin-top: 2.5%;
-    width: 25%;
-    /* border: 1px solid saddlebrown; */
-    /* height: 20%; */
-    /* padding-top: 25%; */
-    text-align: center;
-}
-
-.card-right-container{
-    width: 50%;
-    /* border: 1px solid sandybrown; */
-    /* height: 50%; */
-    display: none;
-    /* text-align: center; */
-
-    
-}
-
-.card-left-container p{
-
-    font-family: var(--font);
-    font-size: 1rem;
-    letter-spacing: 10px;
-    cursor: wait;
-    font-weight: bold;
-
-}
-.card-left-container p:hover{
-    color: orange;
-}
-
-.card-left-container hr{
-    width: 25%;
-    background:rgb(216, 112, 14);
-    height: 1px;
-}
-.card-right-container p{
-
-    font-family: var(--font);
-    font-size: 1rem;
-    letter-spacing: 2px;
-    /* font-weight: bold; */
-
-}
-
-
-.card-left-container:hover + .card-right-container{
-    display: block;
-    animation: appear 2s ease-out;
-    /* cursor: wait; */
-}
-
-@keyframes appear{
-    0%{
-        opacity: 0;
-        transform: translateX(0px);
-    }
-    100%{
-        opacity: 1;
-        transform: translateX(0%);
-    }
-}
-
-.nei2-card-container{
-   
-    display: flex;
-    /* height: 100%; */
-    flex-direction: column;
-    /* align-items: center; */
-    /* border: 1px solid black; */
-
-    
-
-    width: 100%;
-    /* height: 20%; */
-
-    padding-top: 2%;
-    padding-bottom: 5%;
-    
-}
-
-/* .nei2-card-container p:nth-child(1){
-
-    font-family: var(--font);
-    font-size: 1rem;
-    font-weight: 700;
-    color: orange;
-}
-.nei2-card-container p:nth-child(2){
-    padding-left: 2%;
-} */
-
-
-.east-container{
-
-    display: flex;
-    flex-direction: column;
-
-}
-
-.east-title h2{
-    font-family: var(--font);
-    font-size: 5rem;
-    /* letter-spacing: 10px; */
-    padding-left: 2%;
-}
-
-
 
 
