--- a/cambodge.css
+++ b/cambodge.css
@@ -14,31 +14,86 @@
   --desc-color: #a2a2a2;
 }
 
+/* défnir la couleur de fond  et affichage progressif */
 .main_cambodge {
   background-color: #cfe2e9;
+  animation: apparition 1s ease-out;
 }
 
-.article_container1 img{
+@media (max-width: 400px) {
+  .article_container1,
+  .article_container2,
+  .article_container3 {
+    flex-direction: column;
+  }
+
+  .article_container1 p,
+  .article_container1 h3 {
+    width: 100vw;
+    font-size: 15px;
+    position: relative;
+    width: 200%;
+  }
+
+  .article_container2 p,
+  .article_container2 h3 {
+    width: 100vw;
+    font-size: 15px;
+    position: relative;
+    width: 200%;
+  }
+
+  .article_container3 p,
+  .article_container3 h3 {
+    width: 100vw;
+    font-size: 15px;
+    position: relative;
+    width: 200%;
+  }
+
+  .article_container1 img,
+  .article_container2 img,
+  .article_container3 img {
+    width: 100px;
+  }
+
+  .text_container {
+    padding-left: 90px;
+    padding-right: 100px;
+  }
+}
+
+/* Apparition */
+@keyframes apparition {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+/* défnir les tailles des images et ajouter des bordures déco */
+.article_container1 img {
   width: 50%;
   border-top: 4rem solid #32a1ce;
-
 }
-
-.article_container2 img{
+.article_container2 img {
   width: 100%;
-  border-right: 1.5rem solid #32a1ce;
+  border-left: 1.5rem solid #32a1ce;
 }
-
 .article_container3 img {
-  width: 30%;
-    border-right: 3rem solid #32a1ce;
-
+  width: 50%;
+  border-right: 3rem solid #32a1ce;
 }
 
+/* agir sur le contenant du text (taille, centrer, bordures...)*/
 .text_container {
   font-family: var(--font);
   width: 50%;
-  background-color: white;
+  background-color: #cfe2e9;
   text-align: justify;
   display: flex;
   justify-content: center;
@@ -47,44 +102,63 @@
   border-bottom: thick double #32a1ce;
 }
 
+/* centrer le texte dans sa boite */
 .text_container p {
   padding-left: 100px;
   padding-right: 100px;
 }
 
-.article_container1 {
-  display: flex;
-  padding: 20px;
-
-}
-
+/* flex les conteneur 1 et 2 et padding */
+.article_container1,
 .article_container2 {
   display: flex;
   padding: 20px;
+  padding-bottom: 50px;
 }
-
+/* 
+flex le conteur 2 et reverse par rapport à 1 et 3 */
 .article_container3 {
-  padding: 20px;
+  padding-left: 20px;
   display: flex;
   justify-content: flex-end;
   flex-direction: row-reverse;
+  padding-bottom: 50px;
 }
 
-.article_container3::before{
+/* création de contenus déco */
+.article_container1::before {
   content: " ";
-  top:0;
-  left: 0;
-  width: 20px;
-  height: 60px;
-  background: #32a1ce;
-  position: relative ;
- }
+  top: 95px;
+  height: 120px;
+  border-bottom: 30px solid transparent;
+  border-left: 60px solid orange;
+  position: absolute;
+}
+.article_container2::before {
+  content: " ";
+  left: 60px;
+  top: 200px;
+  width: 4px;
+  height: 300px;
+  background: orange;
+  position: relative;
+}
+.article_container3::before {
+  content: " ";
+  right: 20px;
+  top: 80px;
+  width: 60px;
+  height: 150px;
+  background: orange;
+  position: relative;
+}
 
-
-
-
-
-
-.article_container:hover, .article_container_reverse:hover{
-  color: #757272;
-
+/* changement de bck color et taille du texte quand hover*/
+.article_container1:hover .text_container,
+.article_container2:hover .text_container,
+.article_container3:hover .text_container {
+  color: black;
+  background-color: white;
+  font-size: 1.2em;
+  transition: 0.3s;
+}
