--- a/mexique.css
+++ b/mexique.css
@@ -1,118 +1,551 @@
+/* <==== Import du font à partir de google ====> */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* <===== Déclarations des variables dans le ROOT ======> */
+:root {
+  --font: "Poppins", sans-serif;
+  --text-color: #574f57;
+  --text-hover: #979376;
+  --primary-color: #f8ecd3;
+  /* Créer une classe avec la couleur et la taille d'espacement des lettres si besoin*/
+  --desc-color: #a2a2a2;
 }
 
 html {
-    margin: 0;
-    padding: 0;
+  scroll-behavior: smooth;
 }
 
-p, h2, h3, a {
-    font-family: "Poppins", sans-serif;
+body {
+  margin: 0;
+  font-family: var(--font);
+  overflow-x: hidden;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+/* <===== SCROLLBAR ======>*/
+
+/* largeur */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Piste Scrollbar */
+::-webkit-scrollbar-track {
+  background: var(--primary-color);
+}
+
+/* Emplacement Barre de défilement */
+::-webkit-scrollbar-thumb {
+  background: #D7EBBA;
+}
+
+/* <==== Liens ====> */
+
+a {
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: 0.3s;
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+a:hover {
+  color: var(--text-hover);
+}
+
+/* <==== Listes =====> */
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+/* <===== Header ======> */
+
+header {
+  min-height: 100vh;
+  padding: 2em 2em 0 2em;
+  background: url(/img/guadalajara_img/Templo_Expiatorio_del_Santísimo_Sacramento.avif) no-repeat center;
+  background-size: cover;
+  position: relative;
+  color: var(--primary-color);
+  padding-top: 27vh;
+  transition: 0.5s;
+}
+
+header::before {
+  content: "";
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+header a {
+  color: var(--primary-color);
+}
+
+.container,
+.container-inner {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.container-inner {
+  max-width: 1000px;
+}
+
+.container {
+  max-width: 1350px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
+/* <====== NAVBAR =======> */
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2em;
+  z-index: 9;
+  transition: 0.7s;
+}
+
+.logo img {
+  width: 4.6em;
+  height: 4.6em;
+}
+
+nav .container-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+nav .container ul {
+  width: 100%;
+  margin: 0 0.7em;
+}
+
+nav .container .ul-right {
+  margin-left: 150px;
+}
+
+nav .container ul:nth-child(2) {
+  text-align: right;
+}
+
+nav .container ul li {
+  display: inline-block;
+  margin: 0 0.7em;
+}
+
+nav .fa-bars {
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: right;
+}
+
+nav .fa-bars:hover {
+  color: var(--text-hover);
+}
+
+.menu {
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.3em;
+  height: 0;
+  opacity: 0;
+  transition: 0.7s cubic-bezier(0.74, -0.03, 0.83, 0.67);
+  overflow-y: hidden;
+}
+
+.menu ul {
+  margin: 1em auto;
+}
+
+.menu li {
+  margin: 1em 0;
+}
+
+.menu > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.menu > div::-webkit-scrollbar {
+  display: none;
+}
+
+/* <===== Propriétès NAVBAR-JS =====> */
+
+.menu-open {
+  height: 100vh;
+  opacity: 1;
+  background: #574f57;
+}
+
+.navbar-active {
+  background: #574f57;
+}
+
+/* <===== HEADER-BODY =====> */
+
+.header-body {
+  width: 100%;
+}
+
+.header-body .container-inner {
+  margin: 0 1em;
+  padding: 0 1.7em;
+  justify-self: center;
+}
+
+.column {
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.col-1 {
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.col-2 {
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.col-2 > div {
+  width: 100%;
+}
+
+.col-3 {
+  padding-top: 50%;
+  align-items: flex-end;
+}
+
+.social a {
+  display: block;
+  margin: 0.8em 0;
+  font-size: 1.2em;
+}
+
+.big-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 2em;
+}
+
+.big-title sup {
+  font-size: 0.3em;
+}
+
+.title {
+  margin: 0.8em 0.5em 1.5em 0;
+}
+
+.link-main i {
+  margin-left: 0.5em;
+}
+
+.slider-counter {
+  font-weight: 300;
+}
+
+/* <======= PAGINATION ======> */
+
+.pagination {
+  background: var(--desc-color);
+  width: 0.7em;
+  padding: 0.7em;
+  margin: 1em 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.pagination-active {
+  background: #D7EBBA;
+  box-shadow: 0 0 8px (#D7EBBA);
+}
+
+.header-body .fa-chevron-down {
+  font-size: 2.5em;
+}
+
+.slide-card {
+  background: var(--primary-color);
+  padding: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--desc-color);
+  transition: 0.3s;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  min-width: 50vw;
+}
+
+.slide-card > div {
+  margin: 0 1em;
+  max-width: 10em;
+  transition: 0.3s;
+}
+
+.slide-card-active {
+  color: #574f57;
+}
+
 
 .banner_arcticle_history {
-    background-color: #D7EBBA;
+  background-color: #D7EBBA;
 }
 
 
 .history_of_the_city {
-    padding: 5px 0;
+  padding: 5px 0;
 }
 
 .history_of_the_city h2 {
-    margin: 2%;
-    font-size: 6rem
+  margin: 2%;
+  font-size: 6rem
 }
 
 .history_of_the_city p {
-    font-size: 1.2rem;
-    margin: 2%;
-    padding: 0.5%;
-    /* margin-bottom: 3%; */
+  font-size: 1.2rem;
+  margin: 2%;
+  padding: 0.5%;
+  /* margin-bottom: 3%; */
 }
 
 .button_link {
-    margin: 2% 0;
+  margin: 2% 0;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-    background-color: rgb(255, 255, 255);
-    
-    
-    border: 2px solid gray;
-    border-radius: 2px;
-    padding: 1%;
-    
-}
+/* a {
+  text-decoration: none;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  
+  
+  border: 2px solid gray;
+  border-radius: 2px;
+  padding: 1%;
+  
+} */
 
 /* .guadalajara_visit {
-    display: flex;
+  display: flex;
 
 } */
 
 .guadalajara_visit_text, .guadalajara_event_text, .guadalajara_food_text{
-    margin: 2%;
-    color: white;    
+  margin: 2%;
+  color: white;    
 }
 
 .visit_text_and_img, .event_text_and_img, .food_text_and_img {
-    background-color: rgba(0, 0, 0, 0.674);
+  background-color: rgba(0, 0, 0, 0.674);
 }
 
 .guadalajara_visit_img {
-    float: left;
-    margin: 2%;
-    height: 350px;
-    width: 550px;
+  float: left;
+  margin: 2%;
+  height: 350px;
+  width: 550px;
 }
 
 .banner_visit {
-    display: flex;
-    align-items: center;
-    height: 600px;
-    background-image: url(./img/guadalajara_img/hospice001.avif);
-    background-size: cover;
-    background-position: bottom 65% center;
-    object-fit: fixed; 
+
+  display: flex;
+  align-items: center;
+  height: 600px;
+  background-image: url(./img/guadalajara_img/hospice001.avif);
+  background-size: cover;
+  background-position: bottom 65% center;
+  background-attachment: fixed; 
 }
 
 .banner_event {
-    display: flex;
-    align-items: center;
-    height: 600px;
-    background-image: url(./img/guadalajara_img/umbrella.avif);
-    background-size: cover;
-    background-position: bottom 65% center;
-    object-fit: fixed; 
-
+  display: flex;
+  align-items: center;
+  height: 600px;
+  background-image: url(./img/guadalajara_img/umbrella.avif);
+  background-size: cover;
+  background-position: bottom 65% center;
+  background-attachment: fixed; 
 }
 
 .guadalajara_event_img {
-    float: left;
-    margin: 2%;
-    width: 550px;
-    height: 350px;
+  float: left;
+  margin: 2%;
+  width: 550px;
+  height: 350px;
 }
 
 .banner_food {
-    display: flex;
-    align-items: center;
-    height: 600px;
-    background-image: url(./img/guadalajara_img/restaurant.jpg);
-    background-size: cover;
-    background-position: bottom 65% center;
-    object-fit: fixed; 
-
+  display: flex;
+  align-items: center;
+  height: 600px;
+  background-image: url(./img/guadalajara_img/restaurant.jpg);
+  background-size: cover;
+  background-position: bottom 65% center;
+  background-attachment: fixed; 
 }
 
 .empty {
-    height: 60px;
-    background-color: #D7EBBA;
+  height: 60px;
+  background-color: #D7EBBA;
 }
+
+
+
+
+/* <===== FOOTER ======> */
+
+footer {
+  padding: 1.7em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer p {
+  font-weight: 600;
+  margin: 0;
+}
+
+footer span {
+  color: #979376;
+}
+
+footer > div:nth-child(3) a {
+  font-size: 1.2em;
+  margin: 0 0.5em;
+}
+
+hr {
+  width: 90%;
+  border: 1px #eee solid;
+}
+
+/* <====== MEDIAQUERIES RESPONSIVE =====> */
+
+@media screen and (max-width: 1060px) {
+  header {
+    padding-top: 8em;
+  }
+  .header-body .container {
+    grid-template-columns: 1fr;
+  }
+  .heading {
+    flex-direction: column;
+  }
+  .title {
+    margin-bottom: 0.2em;
+  }
+  .scroll-button {
+    margin-top: 3em;
+  }
+  .column {
+    height: initial;
+  }
+  .col-1 {
+    padding: 0 1.7em;
+  }
+  .col-3 {
+    padding-top: initial;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .pagination {
+    margin: 2em 1em;
+  }
+  .slide-card {
+    position: relative;
+  }
+  .social a {
+    display: inline-block;
+    margin: 1em 0.5em;
+  }
+  .social a:nth-child(1) {
+    margin-left: 0;
+  }
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
+  footer > div {
+    margin: 1.7em 0 0 0;
+  }
+}
+
+@media screen and (min-width: 1060px) and (max-height: 500px) {
+  header {
+    padding-top: 10em;
+  }
+  column {
+    height: 550px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  /* !Ca se passe ICI pour le responsive de votre page ===============> */
+  nav .container ul {
+    display: none;
+  }
+  .heading {
+    font-style: 1.5em;
+  }
+  .decouvrir .container-inner {
+    flex-direction: column;
+    align-items: center;
+  }
+  .decouvrir .container-inner > div:nth-child(2) > div:nth-child(1) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .slide-card {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .menu > div {
+    padding-top: 5em;
+    justify-content: flex-start;
+  }
+}
+
+ @media screen and (max-width: 400px) {
+  html {
+    font-size: 13px;
+  }
+}  
