--- a/voyages.css
+++ b/voyages.css
@@ -270,3 +270,35 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: var(--text-hover);
 }
+
+/* <===== FOOTER ======> */
+
+
+footer {
+  font-family: var(--font);
+  padding: 1.7em;
+  display: flex;
+  justify-content: space-around;
+
+  align-items: center;
+}
+
+footer p {
+  font-weight: 600;
+  margin: 0;
+}
+
+footer span {
+  color: #e54461;
+}
+
+footer > div:nth-child(3) a {
+  font-size: 1.2em;
+  margin: 0 0.5em;
+}
+
+hr {
+  width: 90%;
+  border: 1px #eee solid;
+}
+
