--- a/cambodge.css
+++ b/cambodge.css
@@ -493,6 +493,8 @@ footer span {
 footer > div:nth-child(3) a {
   font-size: 1.2em;
   margin: 0 0.5em;
+    color: var(--text-hover);
+
 }
 
 hr {
@@ -502,7 +504,7 @@ hr {
 
 /* <====== MEDIAQUERIES RESPONSIVE =====> */
 
-/* @media screen and (max-width: 1060px) {
+@media screen and (max-width: 1060px) {
   header {
     padding-top: 8em;
   }
@@ -562,7 +564,7 @@ hr {
 
 @media screen and (max-width: 800px) {
   /* !Ca se passe ICI pour le responsive de votre page ===============> */
-/* nav .container ul {
+ nav .container ul {
     display: none;
   }
   .heading {
@@ -594,4 +596,4 @@ hr {
   html {
     font-size: 13px;
   }
-} */
+}
