--- a/voyages.css
+++ b/voyages.css
@@ -108,7 +108,7 @@ body {
 .dropdown_name:hover .dropdown-content_name {
   display: block;
 }
-
+https://www.amica-travel.com/cambodge/kampot
 .dropdown:hover .dropbtn,
 .dropdown_name:hover .dropbtn_name {
   background-color: #6e6e6e;
@@ -295,6 +295,8 @@ footer span {
 footer > div:nth-child(3) a {
   font-size: 1.2em;
   margin: 0 0.5em;
+    color: var(--text-hover);
+
 }
 
 hr {
