--- a/allemagne.css
+++ b/allemagne.css
@@ -1025,6 +1025,7 @@ nav .fa-bars:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
 .nei2-txt-container {
   display: flex;
   flex-direction: column;
@@ -1049,6 +1050,7 @@ nav .fa-bars:hover {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
 .german-food-container {
   display: flex;
   flex-direction: column;
@@ -1060,6 +1062,7 @@ nav .fa-bars:hover {
   font-size: 1rem;
   letter-spacing: 2px;
   padding-left: 2%;
+}
 
 .food-container p {
   font-family: var(--font);
@@ -1073,6 +1076,7 @@ nav .fa-bars:hover {
   flex-direction: row;
   padding-top: 5%;
   padding-left: 2%;
+}
 .ad-container {
   display: flex;
   flex-direction: row;
@@ -1081,12 +1085,14 @@ nav .fa-bars:hover {
 }
 .ad-container p {
   padding-left: 2%;
+}
 .ad-container p {
   padding-left: 2%;
 }
 .ad-container img {
   width: 32px;
   height: 32px;
+}
 .ad-container img {
   width: 32px;
   height: 32px;
@@ -1305,6 +1311,7 @@ hr {
 }
 
 @media screen and (max-width: 800px) {
+
   /* !Ca se passe ICI pour le responsive de votre page ===============> */
   nav .container ul {
     display: none;
@@ -1353,4 +1360,6 @@ hr {
   html {
     font-size: 13px;
   }
+}
+
 }
