--- a/voyages.css
+++ b/voyages.css
@@ -194,9 +194,9 @@ header img {
   display: flex;
   justify-content: center;
   padding: 30px;
-  width: 100vw;
-  height: 100%;
+  width: 96vw;
   background-image: url(img/world_map.jpg);
+  background-size: contain;
 }
 
 .form {
@@ -209,9 +209,6 @@ header img {
   align-items: center;
   max-width: 60%;
   opacity: 0.9;
-}
-.form_container .form .subject {
-  background-color: red;
 }
 
 input[type="text"],
@@ -254,8 +251,7 @@ footer {
   font-family: var(--font);
   padding: 1.7em;
   display: flex;
-  justify-content: space-around;
-
+  justify-content: space-between;
   align-items: center;
 }
 
